# openmp-test

./: CMakeLists.txt  genki.c  genki.h  main.c  pico-nonface.c
